Spring REST Docs - 재설정