@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.4'
     id 'io.spring.dependency-management' version '1.1.0'
-//    id "org.asciidoctor.jvm.convert" version "3.3.2"
+    id "org.asciidoctor.jvm.convert" version "3.3.2"
 }
 
 group = 'shrimp'
@@ -15,9 +15,9 @@ configurations {
     }
 }
 
-//configurations {
-//    asciidoctorExt
-//}
+configurations {
+    asciidoctorExt
+}
 
 repositories {
     mavenCentral()
@@ -55,19 +55,34 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     // Spring REST Docs
-//    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
-//    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+}
+
+ext {
+    snippetsDir = file('build/generated-snippets')
 }
 
 test {
     useJUnitPlatform()
+    outputs.dir snippetsDir
 }
 
-//bootJar {
-//    dependsOn asciidoctor
-//
-//    copy {
-//        from asciidoctor.outputDir
-//        into "src/main/resources/static/docs"
-//    }
-//}
+asciidoctor {
+    forkOptions {
+        jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
+        jvmArgs('--add-opens', 'java.base/java.io=ALL-UNNAMED')
+    }
+    inputs.dir snippetsDir
+    configurations 'asciidoctorExt'
+    dependsOn test
+}
+
+bootJar {
+    dependsOn asciidoctor
+
+    copy {
+        from asciidoctor.outputDir
+        into "src/main/resources/static/docs"
+    }
+}
